# omodul

./: .gitignore  ADR-063.md  CHANGELOG.md  Omodul-CC-Prompts.md  Omodul-Layer3-Proposal.md  README.md  RESEARCH_phase11a.md  SELF_CHECK_P6_B5.md  SELF_CHECK_P6_B6.md  pyproject.toml
.github/workflows/: ci.yml
d/: docker-compose.yml
omodul/: __init__.py  _base.py  _manifest.py  _report.py  agentic_longvideo_pipeline.py  alpha_signals.py  appstore_deploy.py  audit.py  autoheal_cycle.py  backup_database.py  behavior.py  book_understanding_synthesize.py  cognitive.py  consensus_workflow.py  cross_project_health_aggregate.py  daily_digest_workflow.py  daily_mission_workflow.py  data_quality.py  diagnose_connection_pool.py  diagnose_service_health.py  due_recall_push.py  error_journal.py  execution_models.py  export_user_data_csv.py  generative_video_pipeline.py  graphrag_query.py  install_self_hosted_app.py  instant_solve.py  knowledge_reflux.py  llm_signal_workflow.py  mineru_vlm_parse.py  ml_signal_workflow.py  node_register.py  ohlcv_backfill.py  parent_review.py  portfolio_construction.py  process_inbox_substrate.py  process_media_substrate.py  regime.py  regime_workflow.py  (+17 more)
omodul/knowledge/: process_inbox.py  start_mcp_server.py
omodul/knowledge/agents/: base.py
omodul/knowledge/agents/builtin/: __init__.py  audio_generator.py  daily_digest.py  knowledge_curator.py  reading_companion.py  translation_worker.py
omodul/knowledge/browser_extension/: server.py
omodul/knowledge/scheduler/: builtin_jobs.py
omodul/knowledge/views/: preset_loader.py
omodul/portfolio/: __init__.py  cvar_risk_workflow.py
omodul/simulation/: paper_trading_session.py
omodul/strategies/: __init__.py  trend_follower_port.py
tests/: conftest.py  test_aegis_b4.py  test_aegis_omoduls.py  test_agentic_longvideo_pipeline.py  test_aii_m3_m4.py  test_alpha_signals.py  test_animation_workflow.py  test_apply_changeset.py  test_appstore_deploy.py  test_audience_data_workflow.py  test_audit_vcp.py  test_autoheal_cycle.py  test_b11_omoduls.py  test_backup_app_data.py  test_backup_database.py  test_batch_e.py  test_batch_helivex_d.py  test_batch_me.py  test_behavior.py  test_changeset_and_loop.py  test_compact_session.py  test_configure_domain_for_app.py  test_consensus_workflow.py  test_create_session.py  test_cross_asset_ranking.py  test_cross_project_health.py  test_cvar_risk_workflow.py  test_data_normalization.py  test_data_quality.py  test_diagnose_root_cause.py  test_execute_tool.py  test_execution_models.py  test_fork_session.py  test_generate_incident_postmortem.py  test_generative_video_pipeline.py  test_graph_m1.py  test_helios_omoduls.py  test_helios_workflows.py  test_index_codebase.py  test_init_project.py  (+40 more)
tests/backtest/: test_user_system_backtest.py
tests/knowledge/: conftest.py  test_append_episode.py  test_cognitive_diagnosis.py  test_governance_adjudicate.py  test_graphrag_query.py  test_knowledge_reflux.py  test_learning_distill.py  test_process_inbox.py  test_register_entity.py  test_register_ku.py  test_reuse_strategy.py  test_start_mcp_server.py  test_store_memory.py  test_verify_knowledge.py
tests/knowledge/agents/: test_base_registry.py  test_builtin_agents.py  test_illustration_agent.py  test_runner_tracer.py
tests/knowledge/browser_extension/: test_browser_extension.py  test_browser_extension_coverage.py  test_browser_extension_extra.py
tests/knowledge/scheduler/: test_builtin_jobs.py  test_job_store.py  test_scheduler_runner.py
tests/knowledge/views/: conftest.py  test_applier.py  test_crud.py  test_preset_loader.py
tests/llm_workflows/: test_multi_agent_consensus.py
tests/phase10/: test_behavioral_portfolio_workflow.py  test_cross_framework_benchmark.py  test_ez_workflow.py  test_high_dim_portfolio_workflow.py  test_robust_decision_workflow.py  test_state_mm_strategy.py  test_systemic_risk_dashboard.py
tests/portfolio/: test_portfolio_utils.py
tests/profile/: test_individual_profile_workflow.py
tests/real_data/: btc_1m_sample.csv  btc_1y_panel.csv  btc_eth_sol_1m_sample.csv  ff5_factors_5y.csv  okx_raw_candle1m_sample.json  okx_raw_orderbook_sample.json  okx_raw_tickers_sample.json  okx_raw_trades_sample.json  spy_252d_returns.csv
tests/simulation/: test_paper_trading_session.py
tests/strategies/: test_coverage_supplement.py  test_tradingagents_v1_integration.py  test_tradingagents_v1_unit.py
tests/strategy_sprint0/: test_daily_plan_generate.py
tests/sync/: test_bg_sync.py
