[project]
name = "omodul"
version = "1.14.1"
description = "End-to-end financial analysis features built on oprim + oskill"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wiki" }]
keywords = ["finance", "quantitative", "meta-functions", "backtest", "regime", "risk"]

dependencies = [
    "oprim>=2.11",
    "oskill>=3.0",
    "obase>=0.2",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "pydantic>=2.0",
    "structlog>=23.0",            # structured logging in llm_workflows
    "apscheduler>=3.10,<4.0",
    "redis>=4.2",
]

[project.optional-dependencies]
browser-extension = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "readability-lxml>=0.8.1",
    "lxml>=4.9",
    "httpx>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "jsonschema>=4.0",
    "pytest-asyncio>=0.24",       # async test support (llm_workflows)
    "pytest-mock>=3.0",
]

[project.urls]
Repository = "https://github.com/helios-plat/omodul"
Issues = "https://github.com/helios-plat/omodul/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "omodul/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
asyncio_mode = "auto"
markers = [
    "academic_reference: test verifies against published academic/RFC/FIPS reference vectors",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.coverage.run]
source = ["omodul"]
omit = [
    "omodul/strategies.py",   # shadowed dead code — strategies/ package takes precedence
    "omodul/_base.py",        # trivial config, no testable logic
    "omodul/_manifest.py",    # static registry dict, no runtime logic
]

[tool.coverage.report]
fail_under = 90
show_missing = true
